# specalt-web

./: .gitignore  LICENSE  dprint.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
config/: langium.json
examples/: records_and_tuples.specalt
examples/in/: records_and_tuples.spa
lib/: model.ts  utils.ts
lib/lab/: ast.ts  index.ts
lib/language/: jspl-converter.ts  jspl-format-module.ts  jspl-validator.ts  jspl.langium  specalt-converter.ts  specalt-format-module.ts  specalt-validator.ts  specalt.langium  utils.ts
solver/: .gitignore  CMakeLists.txt
solver/include/: emitter.hpp  lexer.hpp  parser.hpp  utils.hpp  utils.inl
solver/src/: emitter.cpp  lexer.cpp  parser.cpp  solver.cpp
solver/wasm/: loader.ts
src/: main.tsx
src/components/: debug.tsx  editor.tsx  error.tsx  lab.tsx  markdown.tsx  optimizer.tsx
src/components/lab/: index.tsx  item.tsx
src/pages/: editor.tsx  index.tsx
src/parser/: index.ts  utils.ts
src/solver/: utils.ts
src/style/: index.css
src/utils/: monaco.ts  search.ts
src/worker/: specalt-server.ts
